apps/argocd/gke/k8s/argocd-gateway/argocd-httproute.yaml
# Declare a route, from the load balancer, to the argocd-server Service
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: apps
      namespace: cluster-resources
      sectionName: https
  hostnames:
    - argocd.kalms.org
  rules:
    - backendRefs:
        - group: ''	
          kind: Service	
          name: argocd-server
          port: 80
          weight: 1	
      matches:
        - path:
            type: PathPrefix
            value: /
